# weave_tool

./: .gitignore  Cargo.toml  README.md  bindings.json  build.rs
qt/: CMakeLists.txt  CMakeLists_cross.txt  CMakeLists_simple.txt  compile_manual.sh  main.cpp  qml.qrc
qt/qml/: ThresholdWindow.qml  main.qml
scripts/: README_cross_compile.md  build_and_run.sh  build_and_run_linux.sh  build_and_run_macos.sh  build_and_run_windows.ps1  check_deps_linux.sh  check_deps_macos.sh  check_deps_windows.ps1  cross_compile_simple.sh  cross_compile_windows.sh  cross_compile_workaround.sh  fix_cmake_cross_compile.sh  setup_cross_compile_env.sh  setup_macos.sh
src/: lib.rs
